Fix bottom gap

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .wrapper {
   position: relative;
   width: 1440px;
-  min-height: 100vh;
+  height: 1379px;
   margin: auto;
 }
 
